@@ -1,6 +1,7 @@
 Release Notes
 
 * 4/18/2016
+  * using 95th percentile for cpuTime
   * fixed dst:XYZ to use nucleus instead of PQ
 
 * 4/14/2016
